Fix responsive logo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -615,12 +615,12 @@ h1, h2, h3, h4, h5,
   background-repeat: no-repeat;
   background-position: top;
   background-position: center center; }
-  @media screen and (max-width: 499px) {
+  @media (max-width: 499px) {
     .site-blocks-cover .logo-desktop {
       display: none;
     }
   }
-  @media screen and (min-width: 500px) {
+  @media (min-width: 500px) {
     .site-blocks-cover .logo-mobile {
       display: none;
     }
@@ -1902,7 +1902,8 @@ h1, h2, h3, h4, h5,
 
 
 .bookAppointment {
-  width: 500px;
+  width: 30%;
+  max-width: 500px;
   height: 50px;
   position: fixed;
   left: 50%;
