--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -8,12 +8,12 @@
 	background-repeat: no-repeat;
 	background-position: top;
 	background-position: center center;
-	@media screen and (max-width: 499px) {
+	@media (max-width: 499px) {
 		.site-blocks-cover .logo-desktop {
 		  display: none;
 		}
 	  }
-	  @media screen and (min-width: 500px) {
+	  @media (min-width: 500px) {
 		.site-blocks-cover .logo-mobile {
 		  display: none;
 		}
@@ -1556,7 +1556,8 @@
 
 
 .bookAppointment {
-	width: 500px;
+	width: 30%;
+	max-width: 500px;
 	height: 50px;
 	position: fixed;
 	left: 50%;
